--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,10 +1,10 @@
 .navbar{
-    background: coral;
+    background: rgb(23, 91, 249);
     max-height: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between
 }
 
-.navbar h1{
+.navbar button{
     cursor: pointer;
 }
