--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,7 +1,31 @@
 .header{
-    background: rgb(90, 249, 81);
-    height: 100px;
+    background:rgb(45, 240, 126);
+    height: 200px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.header h1{
+    font-weight: 800;
+}
+
+.filter{
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.drop{
+    display: flex;
+    justify-content: center;
+    gap:10px;
+    align-items: center;
+    font-weight: 600;
+}
+
+.drop select{
+    outline:none;
 }
