--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -9,24 +9,41 @@
 
 .inputform{
     background: rgb(41, 96, 216);
-    height: 200px;
+    height: 100px;
     width: 100%;
     max-width:1024px ;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap:5px;
     padding-left: 1px;
     padding-right: 1px;
 }
 
+.inp{
+    width: 150px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    padding-left: 5px;
+}
+
+.but{
+    background:rgb(45, 240, 126);
+    padding: 5px;
+    border: none;
+    outline: none;
+    color: black;
+    border-radius: 5px;
+}
+
 .filecomponent{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     width:100%;
-    height: 200px;
+    height: 100px;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 2px;
     gap:5px;
 }
