--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -2,25 +2,58 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 500px;
+    height: 900px;
     align-items: center;
     margin-top: 20px;
 }
 
 .outputform{
     margin-top: 20px;
-    background: rgb(9, 104, 145);
+    background: rgb(23, 91, 249);
     width:100%;
     max-width: 1024px;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 5px;
     border: 2px solid black;
 }
 
 #nexteam{
     cursor: pointer;
-    background: yellow;
+}
+
+#nexteam:hover{
+    background:rgb(45, 240, 126);
+}
+
+.detitem{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.formcontrol{
+    width: 800px;
+    height: 100px;
+    font-size: 20px;
+    border:none;
+    border-radius: 5px;
+    font-weight: 800;
+}
+
+.lab{
+    color: aliceblue;
+    font-weight: 800;
+    font-size: 21px;
+}
+
+#ablink:hover{
+    background:rgb(45, 240, 126);
+}
+
+#ablink{
+    cursor: pointer;
+    outline: none;
 }
