--- a/client/src/components/allprojects/allprojects.css
+++ b/client/src/components/allprojects/allprojects.css
@@ -4,11 +4,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;align-items: center;
+    margin-top: 50px;
 }
 
 .mainhead{
-    margin-top: 30px;
-    font-weight: 800;
+    position: relative;
 }
 
 .projectcontainer{
