--- a/client/src/components/fileuploader/fileuploader.css
+++ b/client/src/components/fileuploader/fileuploader.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     font-weight: 700;
     background: aliceblue;
+    margin-bottom: 20px;
 }
 
 .upbut{
@@ -18,6 +19,7 @@
     color: aliceblue;
     margin-top: 8px;
     color: black;
+    margin-bottom: 20px;
 }
 
 .upbut:hover{
@@ -35,9 +37,11 @@
     align-items: center;
     font-weight: 700;
     gap: 10px;
+    margin-bottom: 30px;
 }
 
 .filelabel{
     margin-top: 8px;
     color: aliceblue;
+    margin-bottom: 20px;
 }
