--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -20,19 +20,23 @@
 
 .inp{
     width: 150px;
-    border-radius: 5px;
     outline: none;
     border: none;
     padding-left: 5px;
 }
 
 .but{
-    background:rgb(45, 240, 126);
+    background:aliceblue;
     padding: 5px;
     border: none;
     outline: none;
     color: black;
-    border-radius: 5px;
+    font-size: small;
+    font-weight: 600;
+}
+
+.but:active{
+    background:rgb(45, 240, 126);
 }
 
 .filecomponent{
