--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -12,20 +12,24 @@
 }
 
 .filter{
-    margin: 20px;
+    margin: 30px;
     display: flex;
     justify-content: space-between;
     gap: 50px;
+    padding: 5px;
 }
 
 .drop{
     display: flex;
     justify-content: center;
     gap:10px;
-    align-items: center;
+    align-content: center;
     font-weight: 600;
 }
 
 .drop select{
     outline:none;
+    border: none;
+    text-align: center;
+    font-weight: 600;
 }
