--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 900px;
     align-items: center;
     margin-top: 20px;
 }
@@ -12,20 +11,20 @@
     background: rgb(23, 91, 249);
     width:100%;
     max-width: 1024px;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 5px;
-    border: 2px solid black;
+    gap: 20px;
 }
 
 #nexteam{
     cursor: pointer;
 }
 
-#nexteam:hover{
+#nexteam:active{
     background:rgb(45, 240, 126);
+    outline: none;
 }
 
 .detitem{
@@ -36,21 +35,31 @@
 
 .formcontrol{
     width: 800px;
-    height: 100px;
     font-size: 20px;
     border:none;
     border-radius: 5px;
-    font-weight: 800;
+    outline: none;
+    overflow-wrap:break-word;
+    text-align: left;
+}
+
+.formcontroldesc{
+    width: 800px;
+    font-size: 20px;
+    overflow-wrap:break-word;
+    text-align: left;
+    color: rgb(93, 212, 119);
 }
 
 .lab{
     color: aliceblue;
-    font-weight: 800;
-    font-size: 21px;
+    font-weight: 500;
+    font-size: 20px;
 }
 
-#ablink:hover{
+#ablink:active{
     background:rgb(45, 240, 126);
+    outline: none;
 }
 
 #ablink{
