--- a/client/src/components/teamdetails/teamdetails.css
+++ b/client/src/components/teamdetails/teamdetails.css
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     margin-top:20px;
-
 }
 
 .teamform{
@@ -19,8 +18,7 @@
     border: none;
     border-radius: 5px;
     gap:30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 
 .teamitem{
@@ -31,31 +29,33 @@
     padding-right: 20px;
 }
 
+.teamdet{
+    display: flex;
+    align-items: center;
+    padding-left:20px;
+    padding-right: 20px;
+}
+
 .teamlabel{
-    font-size: 25px;
+    font-size: 20px;
     width: 200px;
     color: aliceblue;
-    font-weight: 600;
-    text-align: center;
+    font-weight: 500;
+    text-align: left;
 }
 
 .formcontrol{
     width: 800px;
-    text-align: center;
 }
 
 .mem{
     width: 500px;
 }
+
 .teammem {
-    font-size: 30px;
+    font-size: 20px;
     color: aliceblue;
     display: flex;
     justify-content: space-between;
 }
 
-.teamdet{
-    display: flex;
-    align-items: center;
-    gap:20px
-}
