--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -25,7 +25,7 @@
 }
 
 .loginput{
-    border: 1px solid black;
+    border: 1.5px solid black;
     border-radius: 5px;
     padding-left: 5px;
 }
@@ -46,5 +46,5 @@ button:focus{
 
   
 .logbut:active{
-    background-color: rgb(151, 6, 6);
+    box-shadow: 0px 0px 2px 2px rgb(45, 240, 126);
   }
