--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,10 +1,20 @@
+.headercontainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .header{
+    border-radius: 10px;
+    margin-top: 20px;
     background:rgb(45, 240, 126);
-    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
+    width: 100%;
+    max-width: 1024px;
 }
 
 .header h1{
@@ -28,6 +38,7 @@
 }
 
 .drop select{
+    border-radius: 5px;
     outline:none;
     border: none;
     text-align: center;
