--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -21,6 +21,7 @@
 }
 
 .homeintro p{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 95%;
     font-size: medium;
     font-size: 20px;
