--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap:5px;
+    gap:2px;
     padding-left: 1px;
     padding-right: 1px;
 }
@@ -23,6 +23,7 @@
     outline: none;
     border: none;
     padding-left: 5px;
+    border-radius: 5px;
 }
 
 .but{
@@ -33,6 +34,7 @@
     color: black;
     font-size: small;
     font-weight: 600;
+    border-radius: 5px;
 }
 
 .but:active{
