--- a/client/src/components/fileuploader/fileuploader.css
+++ b/client/src/components/fileuploader/fileuploader.css
@@ -7,6 +7,7 @@
     font-weight: 700;
     background: aliceblue;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 .upbut{
@@ -19,6 +20,7 @@
     margin-top: 8px;
     color: black;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 .upbut:active{
