--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -33,7 +33,7 @@
 }
 
 .navbut:active {
-    box-shadow: 0px 0px 2px 2px rgb(45, 240, 126);
+    box-shadow: 0px 0px 2px 2px aliceblue;
     outline: none;
 }
 
