--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -24,7 +24,7 @@
     border: none;
     border-radius: 5px;
     background: transparent;
-    color: rgb(255, 255, 255);
+    color: aliceblue;
     font-weight: 600;
     font-size: medium;
     outline: none;
