--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -7,7 +7,8 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
-    background:rgb(45, 240, 126);
+    background:rgb(5, 120, 53);
+    color: aliceblue;
     display: flex;
     flex-direction: column;
     justify-content: center;
