--- a/client/src/components/teamdetails/teamdetails.css
+++ b/client/src/components/teamdetails/teamdetails.css
@@ -6,7 +6,70 @@
     margin-top:20px;
 }
 
-.teamform{
+.teamdetailconatiner{
+    margin-top: 20px;
+    color: black;
+    width:100%;
+    max-width: 1024px;
+    display: flex;
+    padding: 10px;
+    gap: 10px;
+}
+
+.teamdivision{
+    width: 50%;
+    border: 1.5px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+
+.teamdet{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    text-align: center;
+    gap: 5px;
+}
+
+.teamdetbut{
+    background:rgb(14, 101, 51);
+    font-weight: 600;
+    border: none;
+    color: rgb(255, 255, 255);
+    transition: box-shadow 0.3s;
+    border-radius: 5px;
+}
+
+.members{
+    margin-top: 30px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.eachmem{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.memname{
+    width:50%
+}
+
+.memid{
+    width:50%
+}
+
+
+/* .teamform{
     margin-top: 20px;
     background: rgb(1, 37, 121);
     width:100%;
@@ -57,5 +120,4 @@
     color: aliceblue;
     display: flex;
     justify-content: space-between;
-}
-
+} */
