--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,7 +6,7 @@
 }
 
 .homeintro{
-    box-shadow: 0px 0px 5px 5px rgb(45, 240, 126);
+    box-shadow: 0px 0px 5px 5px rgb(5, 120, 53);
     width: 100%;
     max-width: 1024px;
     font-size: 30px;
@@ -42,7 +42,8 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0px 0px 2px 2px rgb(45, 240, 126);
+    box-shadow: 0px 0px 4px 4px rgb(5, 120, 53);
+    font-weight: bold;
 }
 
 .homeitem img{
