--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -1,14 +1,14 @@
 .allguides{
-    height: 100vh;
-    color: azure;
+    margin-top: 30px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .guidecontainer{
     width: 100%;
     max-width: 1024px;
-    background: white;
     height: 100%;
     margin-top: 30px;
+    text-align: center;
 }
