--- a/client/src/components/allprojects/allprojects.css
+++ b/client/src/components/allprojects/allprojects.css
@@ -18,7 +18,6 @@
     cursor: pointer;
 }
 
-#projectpointer:hover{
-    background:rgb(45, 240, 126);
-    color: black;
+#projectpointer:active{
+    box-shadow: 0px 0px 5px 5px aliceblue;
 }
