--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -42,17 +42,15 @@
 .projectsdoc{
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap:10px;
     margin-top: 30px;
 }
 
 .docbut{
-    width: 50%;
+    width: 100%;
     background: rgb(1, 37, 121);
     border: none;
     color: aliceblue;
-    transition: box-shadow 0.3s;
     cursor: pointer;
     border-radius: 5px;
     font-size: medium;
@@ -60,7 +58,7 @@
 }
 
 .docbut:active{
-    box-shadow: 0px 0px 5px 5px aliceblue;
+    box-shadow: 0px 0px 2px 2px rgb(4, 91, 68);
     outline: none;
 }
 
