--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -3,23 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
-.inputform{
+.projectenter{
     background: rgb(1, 37, 121);
     width: 100%;
     max-width:1024px ;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap:2px;
-    padding-left: 1px;
-    padding-right: 1px;
+    flex-direction: column;
+    gap:5px;
+    padding: 5px;
 }
 
 .inp{
-    width: 150px;
+    width: 100%;
     outline: none;
     border: none;
     padding-left: 5px;
