--- a/client/src/pages/editguide/editguide.css
+++ b/client/src/pages/editguide/editguide.css
@@ -1,11 +1,11 @@
-.profile{
+.editguide{
     margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.profiledetails{
+.editguidedetails{
     margin-top: 20px;
     width: 100%;
     max-width: 1024px;
@@ -16,12 +16,12 @@
     border: 2px solid black;
 }
 
-.proin{
+.editin{
     width: 80%;
     border: 1px solid rgb(2, 81, 2);
 }
 
-.profbut{
+.editupd{
     background: black;
     color: aquamarine;
 }
