--- a/client/src/pages/admin/admin.css
+++ b/client/src/pages/admin/admin.css
@@ -1,4 +1,25 @@
 .adminprofile{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    width: 100%;
+    max-width: 1024px;
+    padding: 5px;
+}
+
+.adminpanel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+.adminprofiletable{
+    width: 70%;
+    text-align: center;
+    table-layout: fixed
+}
+
+.adminprofiletable th,td{
+    border: 1px solid;
 }
