--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -8,6 +8,7 @@
 .loginform{
     margin-top: 30px;
     border: 1.5px solid black;
+    border-radius: 5px;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -20,6 +21,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 600;
     gap:10px;
     width: 100%;
 }
