--- a/client/src/pages/editguide/editguide.css
+++ b/client/src/pages/editguide/editguide.css
@@ -7,13 +7,13 @@
 
 .editguidedetails{
     margin-top: 20px;
-    width: 100%;
+    width: 50%;
     max-width: 1024px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 20px;
-    border: 2px solid black;
+    padding: 10px;
+    border: 1px solid black;
 }
 
 .editin{
@@ -22,6 +22,14 @@
 }
 
 .editupd{
-    background: black;
-    color: aquamarine;
+    background: rgb(6, 6, 65);
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    color: aliceblue;
+}
+
+.editguideinput{
+    display: flex;
+    flex-direction: column;
 }
