--- a/client/src/components/fileuploader/fileuploader.css
+++ b/client/src/components/fileuploader/fileuploader.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
     font-weight: 700;
     background: aliceblue;
+    margin-top: 20px;
     margin-bottom: 20px;
     border-radius: 5px;
 }
