--- a/client/src/components/addguide/addguide.css
+++ b/client/src/components/addguide/addguide.css
@@ -4,10 +4,12 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .inputform{
     background: rgb(1, 37, 121);
+    border-radius: 5px;
     width: 100%;
     height: 100px;
     max-width:1024px ;
@@ -22,8 +24,10 @@
 
 .guideinput{
     border: none;
+    border-radius: 5px;
     width: 20%;
     outline: none;
+    font-weight: bolder;
 }
 
 .guidebut{
@@ -32,6 +36,7 @@
     outline: none;
     font-size: medium;
     font-weight: 600;
+    border-radius: 5px;
 }
 
 .guidebut:active{
