--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -12,30 +12,33 @@
     max-width:1024px ;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap:5px;
     padding: 5px;
 }
 
 .inp{
-    width: 100%;
+    width: 80%;
     outline: none;
     border: none;
     padding-left: 5px;
     border-radius: 5px;
+    font-weight: 600;
 }
 
-.but{
-    background:aliceblue;
+.addprobut{
+    background:rgb(242, 249, 114);
     padding: 5px;
     border: none;
     outline: none;
+    width: 80%;
     color: black;
     font-size: small;
     font-weight: 600;
     border-radius: 5px;
 }
 
-.but:active{
+.addprobut:active{
     background:rgb(45, 240, 126);
 }
 
