--- a/client/src/components/fileuploader/fileuploader.css
+++ b/client/src/components/fileuploader/fileuploader.css
@@ -1,9 +1,15 @@
+.inputupload{
+    width: 50%;
+    display: flex;
+    font-weight: 700;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .customfile{
-    height: 100%;
-    width: 100%;
     max-width: 580px;
     display: flex;
-    justify-content: space-between;
     font-weight: 700;
     background: aliceblue;
     margin-top: 20px;
@@ -13,37 +19,25 @@
 
 .upbut{
     background: aliceblue;
-    margin-bottom: 10px;
-    border:none;
+    border: none;
+    font-size: medium;
     outline: none;
     font-weight: 600;
-    color: aliceblue;
-    margin-top: 8px;
     color: black;
-    margin-bottom: 20px;
     border-radius: 5px;
 }
+
+/* .filelabel{
+    border: 2px solid red;
+    margin-top: 8px;
+    color: aliceblue;
+    margin-bottom: 20px;
+} */
 
 .upbut:active{
     background:rgb(45, 240, 126);
     outline: none;
 }
 
-.inputupload{
-    width: 100%;
-    max-width: 1024px;
-    background: rgb(1, 37, 121);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-    gap: 10px;
-    margin-bottom: 30px;
-}
 
-.filelabel{
-    margin-top: 8px;
-    color: aliceblue;
-    margin-bottom: 20px;
-}
+
