--- a/client/src/components/addproject/addproject.css
+++ b/client/src/components/addproject/addproject.css
@@ -12,41 +12,59 @@
     max-width:1024px ;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap:5px;
+    gap:20px;
     padding: 5px;
 }
 
 .inp{
-    width: 80%;
+    width: 50%;
     outline: none;
     border: none;
+    margin-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
     font-weight: 600;
 }
 
 .addprobut{
-    background:rgb(242, 249, 114);
+    background: rgb(1, 37, 121);
     padding: 5px;
     border: none;
     outline: none;
-    width: 80%;
-    color: black;
+    width: 20%;
+    color: rgb(254, 254, 254);
     font-size: small;
     font-weight: 600;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
 .addprobut:active{
     background:rgb(45, 240, 126);
 }
 
-.filecomponent{
+/* .filecomponent{
     display: flex;
     flex-direction: row;
     justify-content: center;
     width:100%;
     align-items: center;
     gap:5px;
+} */
+
+.projectinputeach{
+    display: flex;
+    flex-direction: column;
+}
+
+.projectinputlabel{
+    color: aliceblue;
+}
+
+.projectselectinput{
+    width: 50%;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
 }
