--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -7,6 +7,7 @@
 
 .homeintro{
     box-shadow: 0px 0px 5px 5px rgb(5, 120, 53);
+    border-radius: 5px;
     width: 100%;
     max-width: 1024px;
     font-size: 30px;
@@ -40,6 +41,7 @@
     width: 20%;
     display: flex;
     flex-direction: column;
+    border-radius: 5px;
     align-items: center;
     cursor: pointer;
     box-shadow: 0px 0px 4px 4px rgb(5, 120, 53);
@@ -47,6 +49,7 @@
 }
 
 .homeitem img{
+    border-radius: 5px;
     width: 100%;
     object-fit: fill;
 }
