--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -41,10 +41,26 @@
     margin-top: 5px;
 }
 
-.loginselect{
-    color: black;
+.logindropdown{
+    width:100px;
+    background: rgb(1, 37, 121);
+    border-radius: 5px;
+    position: absolute;
+    top:82px;
+    right:1px;
 }
 
-.loginoption{
-    color: black;
+.liststyle{
+    display: flex;
+    flex-direction: column;
+}
+
+.profilelistitem{
+    color: aliceblue;
+    text-align:center;
+    cursor: pointer;
+}
+
+.profilelistitem:hover{
+    font-weight: 600;
 }
