--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -42,7 +42,7 @@
 }
 
 .logindropdown{
-    width:100px;
+    width:150px;
     background: rgb(1, 37, 121);
     border-radius: 5px;
     position: absolute;
@@ -53,11 +53,13 @@
 .liststyle{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin-top: 5px;
+    list-style: none;
 }
 
 .profilelistitem{
     color: aliceblue;
-    text-align:center;
     cursor: pointer;
 }
 
