User profile updated

--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -7,17 +7,34 @@
 
 .profiledetails{
     margin-top: 20px;
-    width: 50%;
+    width: 70%;
+    display: flex;
+    padding: 10px;
+    gap: 5px;
+    border: 2px solid black;
+}
+
+.profiledivison1{
+    width:30%;
+    border: 2px dotted;
     display: flex;
     flex-direction: column;
-    padding: 10px;
-    gap: 20px;
-    border: 2px solid black;
+    align-items: center;
+    gap:20px
+}
+
+.profiledivison2{
+    width:70%;
+    display: flex;
+    flex-wrap: wrap;
+    max-height: 200px;
 }
 
 .profileeachdetail{
     display: flex;
     flex-direction: column;
+    width: 50%;
+    padding: 10px;
 }
 
 .proin{
@@ -47,4 +64,18 @@
 
 .guidedproject{
     cursor: pointer;
+}
+
+.guideskill{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profilepic{
+    border: 2px solid;
+    height: 100px;
+    width: 50%;
+    margin-top: 5px;
 }
