--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,19 +6,20 @@
 }
 
 .homeintro{
-    box-shadow: 0px 0px 5px 5px rgb(5, 120, 53);
+    box-shadow: 0px 0px 5px 5px rgb(70, 255, 147);
     border-radius: 5px;
-    width: 100%;
+    width: 80%;
     max-width: 1024px;
     font-size: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+ 
     padding: 5px;
 }
 
-.homeintro h1{
+.homeintro h2{
     text-align: center;
+    font-weight: 600;
 }
 
 .homeintro p{
@@ -38,14 +39,16 @@
 }
 
 .homeitem{
-    width: 20%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0px 0px 4px 4px rgb(5, 120, 53);
+    gap: 30px;
+    box-shadow: 0px 0px 4px 4px rgb(70, 255, 147);
     font-weight: bold;
+    text-align: center;
 }
 
 .homeitem img{
