--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -43,7 +43,8 @@
 
 .logindropdown{
     width:150px;
-    background: rgb(159, 65, 3);
+    background: rgba(176, 10, 10, 0.966);
+    display: flex;
     border-radius: 5px;
     position: absolute;
     top:82px;
@@ -53,7 +54,6 @@
 .liststyle{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     margin-top: 5px;
     list-style: none;
 }
