--- a/client/src/components/allprojects/allprojects.css
+++ b/client/src/components/allprojects/allprojects.css
@@ -2,8 +2,8 @@
     color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-    justify-content: center;align-items: center;
-    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .projectcontainer{
@@ -11,7 +11,6 @@
     max-width: 1024px;
     background: white;
     height: 100%;
-    margin-top: 10px;
 }
 
 #projectpointer{
