--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -47,6 +47,9 @@
     display: flex;
     border-radius: 5px;
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     top:82px;
     right:1px;
 }
@@ -56,6 +59,7 @@
     flex-direction: column;
     margin-top: 5px;
     list-style: none;
+    padding-left: 0;
 }
 
 .profilelistitem{
@@ -65,4 +69,5 @@
 
 .profilelistitem:hover{
     font-weight: 600;
+    text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
 }
