--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,7 +6,7 @@
 }
 
 .homeintro{
-    box-shadow: 0px 0px 5px 5px rgba(12, 83, 33, 0.575);
+    box-shadow: 0px 0px 2px 2px rgb(1, 37, 121);
     border-radius: 5px;
     width: 80%;
     max-width: 1024px;
@@ -46,7 +46,7 @@
     align-items: center;
     cursor: pointer;
     gap: 30px;
-    box-shadow: 0px 0px 4px 4px rgba(12, 83, 33, 0.575);
+    box-shadow: 0px 0px 2px 2px rgba(154, 10, 10, 0.945);
     font-weight: bold;
     text-align: center;
 }
