Guide Display updated

--- a/client/src/components/projectfilter/projectfilter.css
+++ b/client/src/components/projectfilter/projectfilter.css
@@ -8,6 +8,7 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
+    background:rgb(125, 146, 167);
     color: aliceblue;
     display: flex;
     overflow: auto;
