--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -8,7 +8,7 @@
 }
 
 .guidecontainer{
-    margin-top: 5px;
+    margin-top: 20px;
     width: 80%;
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +24,10 @@
     flex-direction: column;
     padding-left: 5px;
     gap:10px;
+}
+
+.guideitem:active{
+    box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
 }
 
 .guide-id{
