--- a/client/src/components/allprojects/allprojects.css
+++ b/client/src/components/allprojects/allprojects.css
@@ -7,16 +7,40 @@
 }
 
 .projectcontainer{
-    width: 100%;
-    max-width: 1024px;
-    background: white;
-    height: 100%;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    gap: 30px;
 }
 
-#projectpointer{
+.projectitem{
+    width: 30%;
+    border-radius: 5px;
+    border: 2px solid rgb(125, 146, 167);
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    padding-left: 5px;
+    gap:10px;
 }
 
-#projectpointer:active{
-    box-shadow: 0px 0px 5px 5px aliceblue;
+.project-title{
+    font-weight: 600;
+    font-size: 25px;
+    color: rgb(3, 65, 81);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.project-domain{
+    font-weight: 600;  
+}
+
+.project-status{
+    font-weight: 600;
+    color: seagreen;
+}
+
+.projectitem:active{
+    box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
 }
