--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -35,7 +35,7 @@
     width: 100%;
     max-width: 1024px;
     display:flex;
-    justify-content:space-around
+    justify-content:space-between;
 }
 
 .homeitem{
