Display Card Style Change

--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -44,3 +44,12 @@
     font-weight: 600;
     color: seagreen;
 }
+
+.guideitem:active{
+    box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
+}
+
+.guideitem:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 2px 2px rgb(125, 146, 167);
+}
