--- a/client/src/components/allprojects/allprojects.css
+++ b/client/src/components/allprojects/allprojects.css
@@ -44,3 +44,8 @@
 .projectitem:active{
     box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
 }
+
+.projectitem:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 2px 2px rgb(125, 146, 167);
+}
