--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -56,3 +56,8 @@
     width: 100%;
     object-fit: fill;
 }
+
+.homeitem:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 2px 2px rgb(1, 37, 121);
+}
