--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -1,14 +1,15 @@
 .homecontainer{
-    margin-top: 20px;
+    /* margin-top: 20px; */
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .homeintro{
-    box-shadow: 0px 0px 5px 5px rgb(5, 120, 53);
+    /* box-shadow: 0px 0px 5px 5px #4d53b3; */
+    background-color: #4D53B3;
     width: 100%;
-    max-width: 1024px;
+    /* max-width: 1024px; */
     font-size: 30px;
     display: flex;
     flex-direction: column;
@@ -18,22 +19,29 @@
 
 .homeintro h1{
     text-align: center;
+    color: #fffefb;
+    padding-top: 20px;
+    font-family: 'Exo 2',sans-serif;
 }
 
 .homeintro p{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:'Raleway', sans-serif;
+    color: #fffefb;
     width: 95%;
-    font-size: medium;
+    font-size: small;
     font-size: 20px;
-    padding: 5px;
+    padding: 10px;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
 .homemenu{
-    margin-top: 30px;
+    margin-top: 50px;
     width: 100%;
     max-width: 1024px;
     display:flex;
     justify-content:space-around
+
 }
 
 .homeitem{
@@ -42,11 +50,15 @@
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0px 0px 4px 4px rgb(5, 120, 53);
+    box-shadow: 1px 3px 2px 2px #4d53b3;
     font-weight: bold;
+    border-radius: 10px;
+    
+    
 }
 
 .homeitem img{
     width: 100%;
     object-fit: fill;
 }
+
