--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -4,7 +4,8 @@
 
 .navbar{
     /* background: rgb(21, 21, 143); */
-    background-image: linear-gradient(180deg,#15158F,#4D53B3);
+    /* background-image: linear-gradient(180deg,#15158F,#4D53B3); */
+    background-color: #00143d;
     height: 70px;
     display: flex;
     justify-content: space-between;
@@ -25,8 +26,8 @@
     border: none;
     border-radius: 5px;
     background: transparent;
-    color: aliceblue;
-    font-weight: 500;
+    color: #fff;
+    font-weight: 600;
     font-size: medium;
     outline: none;
     padding: 5px;
