--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -9,8 +9,8 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
-    background:rgb(120, 171, 223);
-    color: rgb(0, 32, 59);
+    background:#7792ca;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
