--- a/client/src/components/projectfilter/projectfilter.css
+++ b/client/src/components/projectfilter/projectfilter.css
@@ -8,7 +8,7 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
-    background:rgb(120, 171, 223);
+    background:indianred;
     color: aliceblue;
     display: flex;
     overflow: auto;
@@ -36,7 +36,6 @@
     justify-content: center;
     gap:10px;
     align-content: center;
-    font-weight: 600;
 }
 
 .drop select{
@@ -44,5 +43,5 @@
     outline:none;
     border: none;
     text-align: center;
-    font-weight: 600;
+    font-weight: 500;
 }
