--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -9,8 +9,8 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
-    background:#7792ca;
-    color: rgb(0, 0, 0);
+    background:#344e7e;
+    color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +36,7 @@
     justify-content: center;
     gap:10px;
     align-content: center;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .drop select{
