--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,13 +6,12 @@
 }
 
 .homeintro{
-    background-color: #00143d;
+    background-color: #344e7e;
     width: 100%;
     height:50%;
     display: flex;
     flex-direction: column;
-    padding: 10px;
-   
+    padding: 10px; 
 }
 
 .homeintro h1{
