--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -2,28 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .homeintro{
-    background-color: #344e7e;
     width: 100%;
     height:50%;
     display: flex;
     flex-direction: column;
     padding: 10px; 
+    background:url('./img4.jpg');
 }
 
 .homeintro h1{
     text-align: center;
-    color: #fffefb;
+    color: #0b0901;
     padding-top: 20px;
-    font-weight: 600;
 }
 
 .homeintro p{
-    color: #fffefb;
-    font-weight: 500;
+    color: #000000;
     font-size: 20px;
     padding: 10px;
     text-align: center;
@@ -36,8 +33,7 @@
     max-width: 1024px;
     display:flex;
     justify-content:space-around;
-   
-
+    margin-bottom: 20px;
 }
 
 .homeitem{
@@ -50,7 +46,6 @@
     box-shadow: 1px 3px 2px 2px #00143d;
     font-weight: bold;
     border-radius: 10px;
-
 }
 
 .homeitem img{
