--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     padding: 10px; 
-    background:url('./img4.jpg');
+    background:
 }
 
 .homeintro h1{
