--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -34,7 +34,7 @@
 
 .logbut{
     width: 100px;
-    background: rgb(1, 37, 121);
+    background: #00143d;
     color: rgb(255, 255, 255);
     border-radius: 5px;
     border: none;
