--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -4,51 +4,47 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
 }
 
 .guidecontainer{
+    width: 90%;
     margin-top: 20px;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
 }
 
 .guideitem{
-    width: 30%;
     border-radius: 5px;
-    border: 2px solid rgb(125, 146, 167);;
+    box-shadow: 0px 0px 5px 1px  #b1b7c5;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    padding-left: 5px;
     gap:10px;
 }
-
-.guideitem:active{
-    box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
-}
-
 .guide-id{
     font-weight: 600;
+    background: #a4afc9;
+    padding-left: 10px;
 }
 
 .guide-name{
     font-weight: 600;
     font-size: 30px;
+    padding-left: 10px;
 }
 
 .guide-desg{
     font-weight: 600;
     color: seagreen;
+    padding-left: 10px;
 }
 
 .guideitem:active{
-    box-shadow: 0px 0px 5px 5px rgb(125, 146, 167);
+    box-shadow: 0px 0px 5px 1px  #b1b7c5;
 }
 
 .guideitem:hover{
     transform: scale(1.05);
-    box-shadow: 0px 0px 2px 2px rgb(125, 146, 167);
+    box-shadow: 0px 0px 5px 1px  #b1b7c5;
 }
