--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -44,11 +44,9 @@
 .logindropdown{
     width:150px;
     background: rgba(231, 231, 231, 0.966);
-    display: flex;
+    box-shadow: 0px 0px 5px 1px  #4c5465;
     border-radius: 5px;
     position: absolute;
-    display: flex;
-    justify-content: center;
     top:72px;
     right:1px;
 }
@@ -58,7 +56,7 @@
     flex-direction: column;
     margin-top: 5px;
     list-style: none;
-    padding-left: 0;
+    padding: 5px;
 }
 
 .profilelistitem{
