--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -9,7 +9,7 @@
 .header{
     border-radius: 10px;
     margin-top: 20px;
-    background:#344e7e;
+    background: rgb(230, 118, 77);
     color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
