--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -2,7 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 50px;
+}
+
+.login h1{
+    font-weight: 800;
 }
 
 .loginform{
