--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -24,11 +24,12 @@
 }
 .guide-id{
     font-weight: 600;
-    background: #a4afc9;
     padding-left: 10px;
 }
 
 .guide-name{
+    color: rgb(5, 21, 161);
+    background: #a4afc9;
     font-weight: 600;
     font-size: 30px;
     padding-left: 10px;
