--- a/client/src/pages/similarity/similarity.css
+++ b/client/src/pages/similarity/similarity.css
@@ -2,4 +2,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
+}
+
+.drop_box{
+    width: 50%;
+    box-shadow: 0px 0px 3px 3px #00143d;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.drop-zone__input {
+    border: 1px dashed #00143d;
+}
+
+.drop-zone__prompt{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
 }
