--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -1,20 +1,9 @@
 .headercontainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-}
-
-.header{
-    border-radius: 10px;
-    margin-top: 20px;
-    background: rgb(210, 96, 54);
-    color: rgb(255, 255, 255);
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    margin-top: 50px;
 }
 
 .headercontainer h1{
@@ -22,11 +11,13 @@
 }
 
 .filter{
-    margin: 30px;
+    background: rgb(210, 96, 54);
+    color: white;
     display: flex;
-    justify-content: space-between;
-    gap: 50px;
-    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: 10px;
 }
 
 .drop{
