Admin Panel Changed

--- a/client/src/components/addbulkguide/addbulkguide.css
+++ b/client/src/components/addbulkguide/addbulkguide.css
@@ -5,11 +5,13 @@
 }
 
 .bulkguide{
-    background: rgb(218, 218, 232);
-    box-shadow: 2px 2px 3px 3px rgb(100, 104, 109);
+    margin-top: 30px;
+    background: rgb(172, 189, 220);
+    box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);
+    width: 90%;
     border-radius: 5px;
-    width: 80%;
     display: flex;
     justify-content:space-around;
     align-items: center;
+    font-weight: 600;
 }
