--- a/client/src/components/addguide/addguide.css
+++ b/client/src/components/addguide/addguide.css
@@ -1,32 +1,29 @@
 .addguide{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 30px;
+    gap:10px
 }
 
 .inputform{
-    background: rgb(1, 37, 121);
-    width: 100%;
-    max-width:1024px;
-    display: flex;
-    flex-direction: column;
-    gap:10px;
-    padding: 5px;
-    margin-top: 20px;
-    font-weight: 600;
+    background: rgb(172, 189, 220);
+    box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:20px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .inputuserdet{
-    width: 50%;
     display: flex;
     flex-direction: column;
 }
 
 .inputuserdetlab{
-    color: aliceblue;
+    color: rgb(4, 4, 4);
 }
 
 .guideinput{
@@ -39,20 +36,20 @@
 }
 
 .guidebut{
-    border: none;
-    margin-top: 5px;
+    background: rgb(172, 189, 220);
+    box-shadow: 2px 2px 1px 1px rgb(15, 4, 0);
     padding: 5px;
+    border: none;
     outline: none;
-    font-size: small;
+    width: 20%;
+    color: rgb(0, 0, 0);
     font-weight: 600;
     border-radius: 5px;
-    background: rgb(1, 37, 121);
-    color: aliceblue;
 }
 
 .guidebut:active{
-    outline: none;
-    background:rgb(45, 240, 126);
+    background:rgb(239, 96, 44);
+    box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);
 }
 
 
