--- a/client/src/components/allguides/allguides.css
+++ b/client/src/components/allguides/allguides.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 .guidecontainer{
@@ -17,6 +18,7 @@
 .guideitem{
     border-radius: 5px;
     box-shadow: 0px 0px 5px 1px  #b1b7c5;
+    background: rgb(237, 237, 237);
     cursor: pointer;
     display: flex;
     flex-direction: column;
