--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -43,8 +43,11 @@
 
 .logindropdown{
     width:150px;
-    background: rgba(231, 231, 231, 0.966);
+    background: rgb(255, 252, 252);
     box-shadow: 0px 0px 5px 1px  #4c5465;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
     position: absolute;
     top:72px;
