Project Details Changed

--- a/client/src/components/projectdetail/projectdetail.css
+++ b/client/src/components/projectdetail/projectdetail.css
@@ -42,6 +42,10 @@
     background: #a4afc9;
 }
 
+.memtablerow{
+    background: #a4afc9;
+}
+
 .projectsubbut{
     background:rgb(14, 101, 51);
     border: none;
