--- a/client/src/components/guidefilter/guidefilter.css
+++ b/client/src/components/guidefilter/guidefilter.css
@@ -11,12 +11,14 @@
 }
 
 .filter{
-    background: rgb(210, 96, 54);
-    color: white;
+    box-shadow: 2px 3px 2px 2px #00143d;
+    background: rgb(255, 252, 252);
+    width: 90%;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px 10px;
+    padding: 10px;
     border-radius: 10px;
 }
 
@@ -33,7 +35,7 @@
 .drop select{
     border-radius: 5px;
     outline:none;
-    border: none;
+    box-shadow: 0px 0px 5px 1px  #bbc3d8;
     text-align: center;
     font-weight: 600;
 }
