--- a/client/src/pages/editguide/editguide.css
+++ b/client/src/pages/editguide/editguide.css
@@ -5,20 +5,26 @@
     align-items: center;
 }
 
+.editguide h1{
+    font-weight: 800;
+}
+
 .editguidedetails{
     margin-top: 20px;
-    width: 50%;
-    max-width: 1024px;
-    display: flex;
-    flex-direction: column;
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     padding: 10px;
-    border: 1px solid black;
+    box-shadow: 0px 0px 5px 1px  #b1b7c5;
+    background: rgb(172, 189, 220);
 }
 
 .editin{
     width: 80%;
-    border: 1px solid rgb(2, 81, 2);
+    outline: none;
+    border: 1px solid;
+    border-radius: 5px;
 }
 
 .editupd{
