--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -51,7 +51,7 @@
     border-radius: 5px;
     position: absolute;
     top:72px;
-    right:1px;
+    right:0px;
 }
 
 .liststyle{
@@ -69,4 +69,5 @@
 
 .profilelistitem:hover{
     transform: scale(1.05);
+    color:#05b04f;
 }
