--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -10,12 +10,11 @@
     display: flex;
     flex-direction: column;
     padding: 10px; 
-    background: rgb(210, 96, 54);
 }
 
 .homeintro h1{
     text-align: center;
-    color: #ffffff;
+    color: #000000;
     padding-top: 20px;
 }
 
@@ -56,5 +55,4 @@
 
 .homeitem:hover{
     transform: scale(1.05);
-    box-shadow: 0px 2px 2px 2px rgb(1, 37, 121);
 }
